Book swagger doc set up
