# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Library",
-        "description": "HI",
+        "description": "A php library website",
         "contact": {
             "name": "Lucy",
             "email": "alan8365@gmail.com"
@@ -11,67 +11,217 @@
     },
     "servers": [
         {
-            "url": "http://localhost",
-            "description": "dev env"
+            "url": "http://localhost:8000",
+            "description": "Develop environment"
         }
     ],
     "paths": {
-        "book/": {
+        "/book": {
             "get": {
+                "tags": [
+                    "Book"
+                ],
+                "summary": "List all posts by paginate",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "int"
+                        }
+                    }
+                ],
                 "responses": {
-                    "default": {
-                        "description": "HIHI"
+                    "200": {
+                        "description": "list success"
                     }
                 }
             }
         },
-        "book/search": {
+        "/book/{isbn}": {
             "get": {
-                "summary": "search book by title",
-                "operationId": "App\\Http\\Controllers\\Api\\BookController::search",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "title"
-                                ],
-                                "properties": {
-                                    "title": {
-                                        "description": "title of book",
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Show book detail",
+                "operationId": "App\\Http\\Controllers\\Api\\BookController::detail",
+                "parameters": [
+                    {
+                        "name": "isbn",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
                         }
                     }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get detail success."
+                    },
+                    "404": {
+                        "description": "Book not found."
+                    }
+                }
+            }
+        },
+        "/book/favorite": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Show all favorite book.",
+                "operationId": "App\\Http\\Controllers\\Api\\BookController::listFavorite",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "int"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get favorite book success."
+                    }
                 },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/book/favorite/{isbn}": {
+            "post": {
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Chage book favorite status.",
+                "operationId": "App\\Http\\Controllers\\Api\\BookController::setFavorite",
+                "parameters": [
+                    {
+                        "name": "isbn",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Change book favorite status success."
+                    },
+                    "404": {
+                        "description": "Book not found."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/book/search": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Search book by title",
+                "operationId": "App\\Http\\Controllers\\Api\\BookController::search",
+                "parameters": [
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "int"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success"
                     }
                 }
             }
+        },
+        "/auth/store": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register user.",
+                "operationId": "App\\Http\\Controllers\\Api\\UserController::store",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list success"
+                    },
+                    "400": {
+                        "description": "Field invalid"
+                    }
+                }
+            }
         }
     },
     "components": {
-        "schemas": {
-            "ApiResponse": {
-                "title": "響應實體",
-                "description": "響應實體，響應結果統一使用該結構",
-                "properties": {
-                    "code": {
-                        "description": "響應程式碼",
-                        "type": "string"
-                    },
-                    "message": {
-                        "description": "響應結果提示",
-                        "type": "string"
-                    }
-                },
-                "type": "object"
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "name": "bearerAuth",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "Bearer"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Auth",
+            "description": "Auth endpoints"
+        },
+        {
+            "name": "Book",
+            "description": "Auth endpoints"
+        }
+    ]
 }
